--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/ObjectInspector.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/ObjectInspector.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="403.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.ObjectInspectorController">
+<BorderPane id="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="250.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.ObjectInspectorController">
   <center>
     <TitledPane animated="false" collapsible="false" expanded="true" maxHeight="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" text="%objectinspector.title" textAlignment="LEFT" wrapText="false">
       <content>
         <BorderPane maxHeight="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0">
-          <top>
-            <Accordion id="objectInpectorAccordion" fx:id="propertiesAccordion" expandedPane="$null" />
-          </top>
+          <center>
+            <VBox fx:id="propertyPanels" prefHeight="-1.0" prefWidth="-1.0" />
+          </center>
         </BorderPane>
       </content>
     </TitledPane>
