--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.fxml
@@ -16,7 +16,7 @@
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
-            <MenuItem mnemonicParsing="false" onAction="#onClose" text="%menu.close" fx:id="closeMenuItem" />
+            <MenuItem mnemonicParsing="false" onAction="#onClose" text="%menu.close"/>
           </items>
         </Menu>
       </menus>
