--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gameobjectinstance/GameObjectInstanceEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gameobjectinstance/GameObjectInstanceEditor.fxml
@@ -11,9 +11,34 @@
   <center>
     <VBox prefHeight="-1.0" prefWidth="-1.0" spacing="0.0">
       <children>
-        <Label prefWidth="50.0" text="Name" />
-        <TextField fx:id="nameTextField" prefWidth="200.0" />
+        <HBox prefHeight="-1.0" prefWidth="-1.0">
+          <children>
+            <Label prefWidth="58.0" text="Name" />
+            <TextField fx:id="nameTextField" maxWidth="-1.0" prefWidth="-1.0" />
+          </children>
+        </HBox>
+        <HBox alignment="CENTER_LEFT" prefHeight="-1.0" prefWidth="-1.0">
+          <children>
+            <Label prefWidth="58.0" text="Position" />
+            <Label prefWidth="40.0" text="X" />
+            <TextField fx:id="xTextField" prefWidth="45.0" />
+            <Label prefWidth="40.0" text="Y" />
+            <TextField fx:id="yTextField" prefWidth="45.0" />
+          </children>
+        </HBox>
+        <HBox alignment="CENTER_LEFT" prefHeight="-1.0" prefWidth="-1.0">
+          <children>
+            <Label prefWidth="58.0" text="Size" />
+            <Label prefWidth="40.0" text="Width" />
+            <TextField fx:id="widthTextField" prefWidth="45.0" />
+            <Label prefWidth="40.0" text="Height" />
+            <TextField fx:id="heightTextField" prefWidth="45.0" />
+          </children>
+        </HBox>
       </children>
     </VBox>
   </center>
+  <padding>
+    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+  </padding>
 </BorderPane>
