--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gamescene/GameSceneEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gamescene/GameSceneEditor.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -13,10 +14,13 @@
         <HBox prefHeight="-1.0" prefWidth="-1.0" spacing="0.0">
           <children>
             <Label prefWidth="50.0" text="Name" />
-            <TextField fx:id="nameTextField" prefWidth="200.0" HBox.hgrow="ALWAYS" />
+            <TextField fx:id="nameTextField" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
           </children>
         </HBox>
       </children>
     </VBox>
   </center>
+  <padding>
+    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+  </padding>
 </BorderPane>
