--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/ContentArea.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/ContentArea.fxml
@@ -8,7 +8,7 @@
 
 <StackPane id="StackPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="186.0" prefWidth="275.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.contentarea.ContentAreaController">
   <children>
-    <TabPane id="editorAreaTabbedPane" fx:id="editorTabPane" disable="false" prefHeight="-1.0" prefWidth="-1.0" tabClosingPolicy="UNAVAILABLE" visible="true">
+    <TabPane id="editorAreaTabbedPane" fx:id="editorTabPane" disable="false" prefHeight="-1.0" prefWidth="-1.0" rotateGraphic="false" side="TOP" tabClosingPolicy="SELECTED_TAB" visible="true">
       <tabs>
         <Tab text="Game scene #1">
           <content>
