--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/physicstemplate/PhysicsTemplateEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/physicstemplate/PhysicsTemplateEditor.fxml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane id="BorderPane" maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.physicstemplate.PhysicsTemplateEditorController">
   <center>
-    <VBox prefHeight="-1.0" prefWidth="-1.0" spacing="0.0" />
+    <VBox alignment="CENTER_LEFT" prefHeight="-1.0" prefWidth="-1.0" spacing="0.0">
+      <children>
+        <CheckBox fx:id="fixedRotation" mnemonicParsing="false" text="Fixed rotation" />
+      </children>
+    </VBox>
   </center>
+  <padding>
+    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+  </padding>
 </BorderPane>
