--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/EventSheetEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/EventSheetEditor.fxml
@@ -7,13 +7,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.contentarea.eventsheet.EventSheetEditorController">
+<BorderPane id="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="de.mirkosertic.gamecomposer.contentarea.eventsheet.EventSheetEditorController">
   <center>
-    <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0">
+    <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
       <children>
-        <TextField fx:id="eventSheetName" maxWidth="1.7976931348623157E308" prefWidth="-1.0" VBox.vgrow="NEVER" />
         <Hyperlink onAction="#onAddNewRule" text="Add new  rule" />
-        <VBox fx:id="rulesList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+        <VBox fx:id="rulesList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
           <VBox.margin>
             <Insets top="10.0" />
           </VBox.margin>
