--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/RuleEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/RuleEditor.fxml
@@ -8,17 +8,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.contentarea.eventsheet.RuleEditorController">
+<BorderPane id="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="de.mirkosertic.gamecomposer.contentarea.eventsheet.RuleEditorController">
   <center>
-    <VBox prefHeight="-1.0" prefWidth="-1.0">
+    <VBox>
       <children>
-        <TextField fx:id="ruleName" maxWidth="1.7976931348623157E308" prefWidth="-1.0" />
-        <HBox prefHeight="-1.0" prefWidth="-1.0">
+        <TextField fx:id="ruleName" maxWidth="1.7976931348623157E308" />
+        <HBox>
           <children>
-            <VBox prefHeight="-1.0" prefWidth="255.0" HBox.hgrow="NEVER">
+            <VBox prefWidth="255.0" HBox.hgrow="NEVER">
               <children>
-                <Label contentDisplay="TOP" prefWidth="-1.0" text="Event type :" VBox.vgrow="NEVER" />
-                <ComboBox fx:id="eventType" maxWidth="1.7976931348623157E308" onAction="#setEventType" VBox.vgrow="ALWAYS">
+                <Label contentDisplay="TOP" text="Event type :" VBox.vgrow="NEVER" />
+                <ComboBox fx:id="eventType" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
                   <items>
                     <FXCollections fx:factory="observableArrayList">
                       <String fx:value="Item 1" />
@@ -31,28 +31,25 @@
                   </VBox.margin>
                 </ComboBox>
               </children>
-              <padding>
-                <Insets />
-              </padding>
               <HBox.margin>
                 <Insets right="5.0" fx:id="x1" />
               </HBox.margin>
             </VBox>
-            <VBox maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="SOMETIMES" HBox.margin="$x1">
+            <VBox maxWidth="1.7976931348623157E308" HBox.hgrow="SOMETIMES" HBox.margin="$x1">
               <children>
-                <Label prefWidth="-1.0" text="Filter conditions" />
-                <VBox fx:id="filterCoditions" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.margin="$x2" />
+                <Label text="Filter conditions" />
+                <VBox fx:id="filterCoditions" maxWidth="1.7976931348623157E308" VBox.margin="$x2" />
               </children>
             </VBox>
-            <VBox maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="SOMETIMES" HBox.margin="$x1">
+            <VBox maxWidth="1.7976931348623157E308" HBox.hgrow="SOMETIMES" HBox.margin="$x1">
               <children>
-                <Label prefWidth="-1.0" text="Actions">
+                <Label text="Actions">
                   <VBox.margin>
                     <Insets />
                   </VBox.margin>
                 </Label>
                 <Hyperlink onAction="#onAddNewAction" text="Add new action..." />
-                <VBox fx:id="actions" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.margin="$x2" />
+                <VBox fx:id="actions" maxWidth="1.7976931348623157E308" VBox.margin="$x2" />
               </children>
             </VBox>
             <Hyperlink onAction="#onRemoveRule" text="Remove rule" />
