--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/physicstemplate/PhysicsTemplateEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/physicstemplate/PhysicsTemplateEditor.fxml
@@ -7,13 +7,34 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane id="BorderPane" maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.physicstemplate.PhysicsTemplateEditorController">
+<BorderPane id="BorderPane" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="de.mirkosertic.gamecomposer.objectinspector.physicstemplate.PhysicsTemplateEditorController">
   <center>
-    <VBox alignment="CENTER_LEFT" prefHeight="-1.0" prefWidth="-1.0" spacing="0.0">
+    <GridPane maxWidth="1.7976931348623157E308">
       <children>
-        <CheckBox fx:id="fixedRotation" mnemonicParsing="false" text="Fixed rotation" />
+        <CheckBox fx:id="fixedRotation" mnemonicParsing="false" text="Fixed rotation" GridPane.columnIndex="0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
+        <CheckBox id="fixedRotation" fx:id="active" mnemonicParsing="false" text="Active" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <Label text="Density" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <Label text="Friction" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <Label text="Restitution" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <TextField fx:id="density" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <TextField fx:id="friction" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <TextField fx:id="restitution" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       </children>
-    </VBox>
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+        <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" />
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+      <BorderPane.margin>
+        <Insets />
+      </BorderPane.margin>
+    </GridPane>
   </center>
   <padding>
     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
