--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/setproperty/SetPropertyEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/setproperty/SetPropertyEditor.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import java.util.*?>
 <?import javafx.collections.*?>
-<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.*?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<BorderPane id="BorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.contentarea.eventsheet.setproperty.SetPropertyEditorController">
   <center>
     <GridPane hgap="5.0" vgap="5.0">
       <children>
-        <Label text="Game Object:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <Label text="Game Object Instance:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
         <Label text="Property:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
         <Label text="New Value:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="0">
+        <ComboBox fx:id="objectInstance" maxWidth="1.7976931348623157E308" onAction="#onSelectInstance" GridPane.columnIndex="1" GridPane.rowIndex="0">
           <items>
             <FXCollections fx:factory="observableArrayList">
               <String fx:value="Item 1" />
@@ -24,7 +24,7 @@
             </FXCollections>
           </items>
         </ComboBox>
-        <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <ComboBox fx:id="propertyName" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1">
           <items>
             <FXCollections fx:factory="observableArrayList">
               <String fx:value="Item 1" />
@@ -33,9 +33,9 @@
             </FXCollections>
           </items>
         </ComboBox>
-        <TextField maxWidth="1.7976931348623157E308" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <CheckBox maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="CheckBox" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <TextField fx:id="propertyValueTextField" maxWidth="1.7976931348623157E308" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <CheckBox fx:id="propertyValueCheckbox" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="CheckBox" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <ComboBox fx:id="propertyValueComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2">
           <items>
             <FXCollections fx:factory="observableArrayList">
               <String fx:value="Item 1" />
