--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gameobject/GameObjectEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gameobject/GameObjectEditor.fxml
@@ -7,35 +7,42 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane" maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.gameobject.GameObjectEditorController">
+<BorderPane id="BorderPane" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="de.mirkosertic.gamecomposer.objectinspector.gameobject.GameObjectEditorController">
   <center>
-    <VBox id="componentAddHyperlinks" prefHeight="-1.0" prefWidth="-1.0" spacing="0.0">
+    <VBox>
       <children>
-        <HBox id="uuidTextField" prefHeight="-1.0" prefWidth="-1.0" spacing="0.0" VBox.vgrow="NEVER">
+        <GridPane hgap="5.0">
           <children>
-            <Label prefWidth="50.0" text="UUID" />
-            <TextField fx:id="uuidTextField" disable="true" editable="false" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
+            <Label text="UUID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <Label text="Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <Label text="Size" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <HBox id="uuidTextField" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="0">
+              <children>
+                <TextField fx:id="uuidTextField" disable="true" editable="false" HBox.hgrow="ALWAYS" />
+              </children>
+            </HBox>
+            <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
+            <Label prefWidth="40.0" text="Width" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label prefWidth="40.0" text="Height" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <TextField fx:id="widthTextField" prefWidth="45.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <TextField fx:id="heightTextField" prefWidth="45.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <CheckBox id="active" fx:id="visible" mnemonicParsing="false" text="Visible" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
           </children>
-        </HBox>
-        <HBox prefHeight="-1.0" prefWidth="-1.0" spacing="0.0">
-          <children>
-            <Label prefWidth="50.0" text="Name" />
-            <TextField fx:id="nameTextField" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-          </children>
-        </HBox>
-        <HBox alignment="CENTER_LEFT" prefHeight="-1.0" prefWidth="-1.0">
-          <children>
-            <Label prefWidth="58.0" text="Size" />
-            <Label prefWidth="40.0" text="Width" />
-            <TextField fx:id="widthTextField" prefWidth="45.0" />
-            <Label prefWidth="40.0" text="Height" />
-            <TextField fx:id="heightTextField" prefWidth="45.0" />
-          </children>
-          <padding>
-            <Insets bottom="10.0" />
-          </padding>
-        </HBox>
-        <VBox fx:id="componentAddHyperlinks" prefHeight="-1.0" prefWidth="-1.0" />
+          <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+          </columnConstraints>
+          <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          </rowConstraints>
+        </GridPane>
+        <VBox fx:id="componentAddHyperlinks" />
       </children>
     </VBox>
   </center>
