--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gameobjectinstance/GameObjectInstanceEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gameobjectinstance/GameObjectInstanceEditor.fxml
@@ -7,44 +7,53 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane" maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.gameobjectinstance.GameObjectInstanceEditorController">
+<BorderPane id="BorderPane" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="de.mirkosertic.gamecomposer.objectinspector.gameobjectinstance.GameObjectInstanceEditorController">
   <center>
-    <VBox prefHeight="-1.0" prefWidth="-1.0" spacing="0.0">
+    <VBox>
       <children>
-        <HBox prefHeight="-1.0" prefWidth="-1.0">
-          <children>
-            <Label prefWidth="58.0" text="Name" />
-            <TextField fx:id="nameTextField" maxWidth="-1.0" prefWidth="-1.0" />
-          </children>
-        </HBox>
-        <HBox alignment="CENTER_LEFT" prefHeight="-1.0" prefWidth="-1.0">
-          <children>
-            <Label prefWidth="58.0" text="Position" />
-            <Label prefWidth="40.0" text="X" />
-            <TextField fx:id="xTextField" prefWidth="45.0" />
-            <Label prefWidth="40.0" text="Y" />
-            <TextField fx:id="yTextField" prefWidth="45.0" />
-          </children>
-        </HBox>
-        <HBox alignment="CENTER_LEFT" prefHeight="-1.0" prefWidth="-1.0">
-          <children>
-            <Label prefWidth="58.0" text="Rot." />
-            <TextField id="widthTextField" fx:id="rotationTextField" prefWidth="45.0" />
-            <Label prefWidth="-1.0" text="Degrees" />
-          </children>
+        <HBox />
+        <HBox alignment="CENTER_LEFT" />
+        <HBox alignment="CENTER_LEFT">
           <padding>
             <Insets bottom="10.0" />
           </padding>
         </HBox>
-        <Hyperlink fx:id="jumpToObject" text="Jump to object...">
-          <VBox.margin>
-            <Insets top="20.0" />
-          </VBox.margin>
-        </Hyperlink>
       </children>
     </VBox>
   </center>
   <padding>
     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
   </padding>
+  <top>
+    <GridPane hgap="5.0">
+      <children>
+        <Label text="Name" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="0" GridPane.rowSpan="1" />
+        <Label text="Position" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <Label text="X" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+        <TextField fx:id="xTextField" prefWidth="45.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+        <Label text="Y" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+        <TextField fx:id="yTextField" prefWidth="45.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+        <Label text="Rot." GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <TextField id="widthTextField" fx:id="rotationTextField" prefWidth="45.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Label text="Degrees" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" />
+        <Hyperlink fx:id="jumpToObject" text="Jump to object..." GridPane.columnIndex="0" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" GridPane.rowSpan="1" />
+        <CheckBox fx:id="visible" mnemonicParsing="false" text="Visible" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
+      </children>
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+    </GridPane>
+  </top>
 </BorderPane>
