--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/physicstemplate/PhysicsTemplateEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/physicstemplate/PhysicsTemplateEditor.fxml
@@ -7,24 +7,27 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane id="BorderPane" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="de.mirkosertic.gamecomposer.objectinspector.physicstemplate.PhysicsTemplateEditorController">
+<BorderPane id="BorderPane" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.physicstemplate.PhysicsTemplateEditorController">
   <center>
     <GridPane maxWidth="1.7976931348623157E308">
       <children>
         <CheckBox fx:id="fixedRotation" mnemonicParsing="false" text="Fixed rotation" GridPane.columnIndex="0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
         <CheckBox id="fixedRotation" fx:id="active" mnemonicParsing="false" text="Active" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <Label text="Density" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <Label text="Friction" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-        <Label text="Restitution" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <Label text="Density:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <Label text="Friction:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <Label text="Restitution:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
         <TextField fx:id="density" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         <TextField fx:id="friction" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         <TextField fx:id="restitution" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Label text="Gravity scale:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+        <TextField fx:id="gravityScale" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
         <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" />
       </columnConstraints>
       <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
