--- a/gameengine-gwtrenderer/src/main/webapp/style.css
+++ b/gameengine-gwtrenderer/src/main/webapp/style.css
@@ -9,6 +9,19 @@ body {
 .mainCanvas {
     border: 0;
     padding: 0;
+    z-index: 99;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.overlayCanvas {
+    border: 0;
+    padding: 0;
+    z-index: 100;
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
 
 #canvasholder {
